<resources>
    <string name="app_name">酷我乳业</string>
    <string name="input_phone_num">请输入手机号码</string>
    <string name="tv_login">登录</string>
    <string name="input_phone_pwd">请输入密码</string>
    <string name="news">资讯</string>
    <string name="dangdangl">订单管理</string>
    <string name="jingchangsq">进场费用申请</string>
    <string name="cuxiaoshengqing">促销活动申请</string>
    <string name="feilvbilv">费效比率</string>
    <string name="cuxiao_product">促销产品</string>
    <string name="sale_goal">促销目标</string>
    <string name="changqingchenglie">产品陈列</string>
    <string name="feiyongshengqin">费用申请</string>
    <string name="news_list_text">酷我乳业： 有一种文化，叫成就 、\n有一种文化叫。。</string>
    <string name="news_list_time">10:13</string>
    <string name="offer">职位：</string>
    <string name="offer_name">经销商</string>
    <string name="take_area">负责区域：</string>
    <string name="take_area_name">北大仓</string>
    <string name="area_manager_text">地址管理</string>
    <string name="exit">退出登录</string>
    <string name="pwd_modifier_text">密码修改</string>
    <string name="jxcmanager_text">进销存管理</string>
    <string name="ask_goods_plan_text">要货计划</string>
    <string name="my_datas_text">我的资料</string>
    <string name="target_done_text">目标完成</string>
    <string name="my_team_text">我的团队</string>
    <string name="my_sigin_text">我的签名</string>
    <string name="me_center_title">我的</string>
    <string name="news_title">新闻资讯</string>
    <string name="other_cost_apply">其他费用申请</string>
    <string name="news_detail_title">新闻资讯</string>
    <string name="bt_down_bill">开始下单</string>
    <string name="h5_test_datas"><![CDATA[<!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 Transitional//EN\" \"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd\"> <html xmlns=\"http://www.w3.org/1999/xhtml\"> <head> <meta http-equiv=\"Content-Type\" content=\"text/html; charset=utf-8\" /> <title>无标题文档</title> <style type=\"text/css\">    html{     font-size:{{FONTSIZE}}; padding:5px 5px;     }        .box { font-size:1rem; line-height:28px; color:#333} \t.box p { margin-top:26px; }    .box img { float:left;  width:100%; padding-top:20px; padding-bottom:30px}    .box .x { border-bottom:1px solid #F96}    .box span { background-color:#F96; padding:3px 3px; color:#fff;}            </style> </head>  <body> <div class=\"box\">  <img src=\"http://www.chijiao79.com:8010/kindeditor/image/20170213/20170213112053_9905.jpg\"/> 鸡蛋，是一种非常适合糖友们的常见食物，它能够为广大糖友们补充大量优质蛋白质，几乎是广大糖友们每天都要吃的东西。糖友每天都要吃上一个鸡蛋，如果想吃一个以上的话，可以只吃一个鸡蛋黄，因为鸡蛋黄胆固醇含量高，会让糖友们的血脂上升。 <img src=\"http://www.chijiao79.com:8010/kindeditor/image/20170213/20170213111304_6155.jpg\"/> <p><div class=\"x\"><span>一、银耳 鸡蛋</span></div></p> 银耳适合搭配鸡蛋或鹌鹑蛋食用，能补充营养，同时银耳中的胶质又能防止人体吸收过多的胆固醇，避免血管硬化。 </p>  <p><div class=\"x\"><span>二、金针菇 鸡蛋</span></div></p> 金针菇和鸡肉同食可滋补养身，金针菇中的膳食纤维还可以阻止吸收胆固醇。 </p>  <p><div class=\"x\"><span>三、丝瓜 鸡蛋</span></div></p> 丝瓜适宜搭配鸡蛋食用，两者的营养可以互补，而且丝瓜中的膳食纤维还可以降低多吃鸡蛋引起的胆固醇升高。 </p> <img]]></string>
    <string name="oder_manager_title">订单管理</string>
    <string name="oder_time_text">订单时间</string>
    <string name="order_store_name">中百仓储光谷天地店</string>
    <string name="sum_cost">总费用</string>
    <string name="product_num">共50件商品</string>
    <string name="area_manager">收货地址</string>
    <string name="pwd_modifier">修改密码</string>
    <string name="add_area">新增收货地址</string>
    <string name="new_pwd">新密码</string>
    <string name="comfir_pwd">确认密码</string>
    <string name="old_pwd">原密码</string>
    <string name="submit">提交</string>
    <string name="jxc_manager">进销库存管理</string>
    <string name="update_repertory">更新库存</string>
    <string name="jxc_join">进</string>
    <string name="month_day">11月30日</string>
    <string name="last_repertory">剩余库存:</string>
    <string name="ask_goods_plan">我的要货计划</string>
    <string name="person_name">李四</string>
    <string name="no_week">第二周</string>
    <string name="year_month_day_time">2017-11-28  13：23:21</string>
    <string name="my_datas">我的资料</string>
    <string name="target_done">目标完成情况</string>
    <string name="target_money">目标回款：2万</string>
    <string name="really_money">实际回款: 4万</string>
    <string name="target_return_money">目标回款：</string>
    <string name="really_get_money">实际回款：</string>
    <string name="my_team">我的团队</string>
    <string name="my_sign">我的签名</string>
    <string name="login_out">退出登录</string>
    <string name="jxc">进销存</string>
    <string name="target_complete">目标完成</string>
    <string name="store_area">仓库面积</string>
    <string name="transportation_car">运输车辆</string>
    <string name="team_num">团队人数</string>
    <string name="sale_area">销售区域</string>
    <string name="sale_channel">销售渠道</string>
    <string name="sale_brand">经营品牌</string>
    <string name="industry_suffer">行业经验</string>
    <string name="registered_fund">注册资金</string>
    <string name="blank_name">银行名称</string>
    <string name="blank_number">银行卡号</string>
    <string name="really_name">真实姓名</string>
    <string name="business_license">营业执照</string>
    <string name="add_photos">照片</string>
    <string name="feed_qualified">食品经营\n许可证</string>
    <string name="activity_apply_for">活动申请</string>
    <string name="activity_check">活动核销</string>
    <string name="apply_for_activity">申请活动</string>
    <string name="activity_time">活动时间</string>
    <string name="activity_award">活动：通道奖励</string>
    <string name="activity_money">活动费用：¥3000</string>
    <string name="sale_money">销售额：¥3000</string>
    <string name="other_money_apply">其他费用申请提交</string>
    <string name="explain">说明</string>
    <string name="gist">主旨</string>
    <string name="et_other_cost_hint">请填写说明</string>
    <string name="cost">费用</string>
    <string name="modifier_bill">修改订单</string>
    <string name="order_close">订单结算</string>
    <string name="order_detail">订单详情</string>
    <string name="order_detail_area">武汉市 洪山区 光谷大道 未来之光7-1107</string>
    <string name="order_remark">订单备注</string>
    <string name="order_submit">订单提交</string>
    <string name="order_update">确认提交</string>
    <string name="order_message">订单信息</string>
    <string name="approve_message">审批信息</string>
    <string name="order_number">订单编号：</string>
    <string name="submit_time">提交时间：</string>
    <string name="order_from">订单备注：</string>
    <string name="dispatch_info">配送信息</string>
    <string name="dispatch_time">发货时间：</string>
    <string name="get_goods_time">送达时间：</string>
    <string name="get_goods_area">收货地址：</string>
    <string name="confirm_get_goods">确认收货</string>
    <string name="confirm_up_take_goods">确认收货</string>
    <string name="submit_info">请上传支付成功照片截图</string>
    <string name="photo">照片</string>
    <string name="confirm_get_goods_ok">确认收货成功</string>
    <string name="apply_for_sale">促销活动</string>
    <string name="approve_name">审批人员：</string>
    <string name="approve_time">审批时间：</string>
    <string name="turn_down">拒绝</string>
    <string name="pass">通过</string>
    <string name="activity_detial">活动详情</string>
    <string name="activity_name">活动名称</string>
    <string name="activity_goal">活动目的</string>
    <string name="product_file">产品清单</string>
    <string name="execute_city">执行城市</string>
    <string name="execute_area">执行范围</string>
    <string name="execute_time">执行时间</string>
    <string name="content">内容及形式</string>
    <string name="material">物料</string>
    <string name="rate">费效比率</string>
    <string name="match_up_brach">支持/配合部门</string>
    <string name="sale_room">销售额</string>
    <string name="appear_in">提报人</string>
    <string name="post_area">提报省区</string>
    <string name="dealer">经销商</string>
    <string name="execute_time_expmal">执行时间</string>
    <string name="need_goods">需要物料</string>
    <string name="kuwoshangchen">酷我商城</string>
    <string name="kuwo_ruye">酷我乳业</string>
    <string name="activity_xiaohe">促销活动销核</string>
    <string name="total">合计</string>
    <string name="submit_repertory">提交库存</string>
    <string name="date">日期</string>
    <string name="second_moth">第几周</string>
    <string name="submit_askplan">提交要货计划</string>
    <string name="no_data">暂无记录</string>
    <string name="delete_tip">确定删除？</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="operation_success_tip">操作成功</string>
    <string name="pass_tip">确认通过?</string>
    <string name="refuse_pass_tip">拒绝通过</string>
    <string name="confirm_pay">确认支付</string>
    <string name="experience">立即体验</string>
    <string name="activity_site_pic_manager">活动现场图片管理</string>
    <string name="add_pic">添加图片</string>
    <string name="site_pic_uploading">活动现场图片上传</string>
    <string name="pic_describe">图片描述</string>
    <string name="save">保存</string>
    <string name="ticket_pic_manager">票据图片管理</string>
    <string name="activity_site_pic_loading">活动现场照片上传</string>
    <string name="year">年</string>
    <string name="init_repertory">初始化库存</string>
    <string name="need_add_info">暂无记录，点击完善库存信息</string>
    <string name="perfect_repertory">完善库存</string>
    <string name="deliver_goods">送货司机:</string>
    <string name="detail">明细</string>
    <string name="update_order">修改订单</string>
    <string name="delete">删除</string>
    <string name="sale_activity_xiaohe_detail">促销活动核销详情</string>
    <string name="sale_activity_apply_detail">促销活动申请详情</string>
    <string name="sale_activity_submit">促销活动申请提交</string>
    <string name="sale_activity_hexiao_modifier">促销活动核销修改</string>
    <string name="join_site_cost_apply_detail">进场费用申请详情</string>
    <string name="join_site_cost_apply_submit">进场费用申请提交</string>
    <string name="join_site_cost_hexiao_detail">进场费用核销详情</string>
    <string name="display_cost_apply_detail">产品陈列费用申请详情</string>
    <string name="display_cost_apply_submit">产品陈列申请提交</string>
    <string name="display_cost_apply_update">产品陈列申请修改</string>
    <string name="display_cost_hexiao_detail">产品陈列核销详情</string>
    <string name="display_hexiao_update">产品陈列核销修改</string>
    <string name="other_money_detail">其他费用申请详情</string>
    <string name="other_cost_hexiao_detail">其他费用核销详情</string>
    <string name="other_cost_hexiao_update">其他费用核销修改</string>
    <string name="join_site_hexiao_update">进场费用核销修改</string>
    <string name="confirm_update">确定修改</string>
    <string name="again_loading">重新加载</string>
    <string name="no_net_tip">网络不给力，请稍后重试</string>
    <string name="submit_order">订单提交</string>
    <string name="sale_activity_update">促销活动申请修改</string>
    <string name="join_site_cost_update">进场费用申请修改</string>
    <string name="ask_goods_plan_detail">要货计划明细</string>
    <string name="execute_ranges">执行范围</string>
</resources>
