<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/comm_white"
              android:orientation="vertical">
    <RelativeLayout
        android:padding="@dimen/dm010"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm090"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/comm_title_bar"
        >
        <ImageView
            android:scaleType="centerInside"
            android:id="@+id/iv_activity_back"
            android:layout_marginLeft="@dimen/dm005"
            android:layout_centerVertical="true"
            android:layout_width="@dimen/dm080"
            android:layout_height="@dimen/dm080"
            android:src="@drawable/back"
            />
        <TextView
            android:textSize="@dimen/dm030"
            android:layout_centerInParent="true"
            android:id="@+id/tv_comm_title_bar_three"
            android:textColor="@color/comm_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_site_pic_loading"
            />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm350"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/et_pic_describe"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dm348"
            android:background="@null"
            android:gravity="left|top"
            android:hint="@string/pic_describe"
            android:padding="@dimen/dm020"/>

        <View
            style="@style/fine_short_line"
            android:layout_alignParentBottom="true"></View>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm000"
        android:layout_weight="1"
        android:background="@color/comm_white"
        android:orientation="vertical"
        android:padding="@dimen/dm010"
        >

      <include layout="@layout/comm_addpic_place" android:id="@+id/rl_site_pic_update"></include>
        <hwd.kuworuye.weight.MyScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <hwd.kuworuye.weight.MyGridView
                android:id="@+id/mg_site_pic_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:horizontalSpacing="5dp"
                android:numColumns="3"/>
        </hwd.kuworuye.weight.MyScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/bt_save_pic"
        style="@style/Button"
        android:layout_marginBottom="@dimen/dm020"
        android:layout_marginTop="@dimen/dm020"
        android:text="@string/save"/>

</LinearLayout>