<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dm025">

            <TextView
                android:id="@+id/tv_order_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dm010"
                android:text="@string/activity_time"
                android:textColor="@color/oder_send_time"
                android:textSize="@dimen/dm026"
                />

            <TextView
                android:id="@+id/tv_activity_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dm005"
                android:layout_toRightOf="@+id/tv_order_time"
                android:text="2017-02-24 14:20"
                android:textColor="@color/oder_send_time"
                />

            <TextView
                android:id="@+id/tv_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dm010"
                android:text="待审批"
                android:textColor="@color/oder_send_state"
                android:textSize="@dimen/dm026"
                />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dm001"
            android:layout_marginLeft="@dimen/dm040"
            android:background="@color/oder_list_divider">
        </View>

        <LinearLayout
            android:padding="@dimen/dm030"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/dm080"
                android:layout_height="@dimen/dm080"
                android:src="@drawable/itemlogo"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dm040"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/tv_activity_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/activity_award"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dm010"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/tv_activity_cost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dm005"
                        android:text="@string/activity_money"
                        android:textColor="@color/sale_money_text"
                        />


                    <TextView
                        android:id="@+id/tv_sale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dm010"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@string/sale_money"
                        android:textColor="@color/sale_money_text"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            style="@style/rude_line">
        </View>

    </LinearLayout>
</LinearLayout>