<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dm100"
            android:layout_marginLeft="@dimen/dm015"
            android:layout_marginRight="@dimen/dm015"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/old_pwd"
                android:textColor="@color/goods_area"
                android:textSize="@dimen/dm028"
                />

            <EditText
                android:id="@+id/et_old_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dm050"
                android:background="@null"
                android:inputType="textPassword"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dm001"
            android:background="@color/modifier_pwd_divier">

        </View>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dm100"
            android:layout_marginLeft="@dimen/dm015"
            android:layout_marginRight="@dimen/dm015"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/new_pwd"
                android:textColor="@color/goods_area"
                android:textSize="@dimen/dm028"
                />

            <EditText
                android:id="@+id/et_new_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dm050"
                android:background="@null"
                android:inputType="textPassword"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dm001"
            android:background="@color/modifier_pwd_divier">

        </View>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dm100"
            android:layout_marginLeft="@dimen/dm015"
            android:layout_marginRight="@dimen/dm015"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/comfir_pwd"
                android:textColor="@color/goods_area"
                android:textSize="@dimen/dm028"
                />

            <EditText
                android:id="@+id/et_confrim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dm023"
                android:background="@null"
                android:inputType="textPassword"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dm001"
            android:background="@color/modifier_pwd_divier">

        </View>
    </LinearLayout>

    <Button
        android:id="@+id/bt_login_commit"
        style="@style/Button"
        android:layout_marginTop="32dp"
        android:text="@string/submit"
        />
</LinearLayout>